feat: change CTAs to 'Trova il Servizio' linking to slider

--- a/src/index.html
+++ b/src/index.html
@@ -1291,7 +1291,7 @@
         <nav class="nav">
             <a href="/blog/" class="nav-link">Blog</a>
             <a href="/servizi/" class="nav-link">Servizi</a>
-            <a href="/blog/" class="nav-cta">Esplora le Guide</a>
+            <a href="/servizi/" class="nav-cta">Trova il Servizio</a>
         </nav>
         <button class="menu-toggle" aria-label="Menu">
             <span></span>
@@ -1337,14 +1337,14 @@
                     Guide pratiche, consigli di esperti e informazioni sempre aggiornate per navigare il mercato immobiliare italiano con sicurezza.
                 </p>
                 <div class="hero-actions">
-                    <a href="/blog/" class="btn btn-primary">
-                        Esplora le Guide
+                    <a href="/servizi/" class="btn btn-primary">
+                        Trova il Servizio
                         <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
                         </svg>
                     </a>
-                    <a href="#categorie" class="btn btn-secondary">
-                        Scopri le Categorie
+                    <a href="/blog/" class="btn btn-secondary">
+                        Esplora le Guide
                     </a>
                 </div>
             </div>
